--- a/sa-token-dependencies/pom.xml
+++ b/sa-token-dependencies/pom.xml
@@ -12,14 +12,14 @@
     <description>Sa-Token Dependencies</description>
 
     <properties>
-        <revision>1.33.0</revision>
+        <revision>1.33.0-jakarta</revision>
 		
 		<!-- 统一定义依赖版本号 -->
-		<springboot.version>2.5.12</springboot.version>
+		<springboot.version>3.0.0</springboot.version>
 		<reactor-core.version>3.1.4.RELEASE</reactor-core.version>
 		<jackson-databind.version>2.13.4.1</jackson-databind.version>	
 		<jackson-datatype-jsr310.version>2.11.2</jackson-datatype-jsr310.version>
-		<servlet-api.version>3.1.0</servlet-api.version>
+		<servlet-api.version>6.0.0</servlet-api.version>
 		<thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
 		<solon.version>1.10.13</solon.version>
 		<noear-redisx.version>1.4.4</noear-redisx.version>
@@ -40,8 +40,8 @@
 			<!-- ****************** sa-token-starter 相关依赖 ****************** -->
 	        <!-- Servlet API -->
 	        <dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>javax.servlet-api</artifactId>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
 				<version>${servlet-api.version}</version>
 			</dependency>
 			
