--- a/sa-token-demo/sa-token-demo-solon/pom.xml
+++ b/sa-token-demo/sa-token-demo-solon/pom.xml
@@ -9,7 +9,7 @@
 	
 	<!-- 定义 Sa-Token 版本号 -->
 	<properties>
-		<sa-token.version>1.33.0-jakarta</sa-token.version>
+		<sa-token.version>1.33.0-jakarta-SNAPSHOT</sa-token.version>
 		<solon.version>1.10.13</solon.version>
 	</properties>
 
