--- a/sa-token-demo/sa-token-demo-sso3-client/pom.xml
+++ b/sa-token-demo/sa-token-demo-sso3-client/pom.xml
@@ -16,7 +16,7 @@
 	
 	<!-- 定义 Sa-Token 版本号 -->
 	<properties>
-		<sa-token.version>1.33.0-jakarta</sa-token.version>
+		<sa-token.version>1.33.0-jakarta-SNAPSHOT</sa-token.version>
 	</properties>
 
 	<dependencies>
