--- a/sa-token-dependencies/pom.xml
+++ b/sa-token-dependencies/pom.xml
@@ -12,7 +12,7 @@
     <description>Sa-Token Dependencies</description>
 
     <properties>
-        <revision>1.33.0-jakarta</revision>
+        <revision>1.33.0-jakarta-SNAPSHOT</revision>
 		
 		<!-- 统一定义依赖版本号 -->
 		<springboot.version>3.0.0</springboot.version>
